Use Map.copyOf instead of unmodifiableMap in ReceivedSpan
Map.copyOf produces a truly immutable copy regardless of whether the
caller retains a reference to the original map, whereas unmodifiableMap
only prevents modification through the returned reference.